--- a/GigHub/GigHub.csproj
+++ b/GigHub/GigHub.csproj
@@ -213,6 +213,10 @@
     <Compile Include="Migrations\201805220110525_OverrideConventionsForGigsAndGenres.Designer.cs">
       <DependentUpon>201805220110525_OverrideConventionsForGigsAndGenres.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805220117087_PopulateGenresTable.cs" />
+    <Compile Include="Migrations\201805220117087_PopulateGenresTable.Designer.cs">
+      <DependentUpon>201805220117087_PopulateGenresTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -308,6 +312,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201805220110525_OverrideConventionsForGigsAndGenres.resx">
       <DependentUpon>201805220110525_OverrideConventionsForGigsAndGenres.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805220117087_PopulateGenresTable.resx">
+      <DependentUpon>201805220117087_PopulateGenresTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
