--- a/GigHub/GigHub.csproj
+++ b/GigHub/GigHub.csproj
@@ -242,7 +242,9 @@
     <Compile Include="Services\GigServices.cs" />
     <Compile Include="Services\IGigService.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\FutureDate.cs" />
     <Compile Include="ViewModels\GigFormViewModel.cs" />
+    <Compile Include="ViewModels\ValidTime.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
