added name to accounts, refactor

--- a/GigHub/GigHub.csproj
+++ b/GigHub/GigHub.csproj
@@ -231,8 +231,11 @@
     <Compile Include="Migrations\201805230420428_AddForeignKeyPropertiesToGig.Designer.cs">
       <DependentUpon>201805230420428_AddForeignKeyPropertiesToGig.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201807211639503_AddNameToApplicationUser.cs" />
+    <Compile Include="Migrations\201807211639503_AddNameToApplicationUser.Designer.cs">
+      <DependentUpon>201807211639503_AddNameToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\Gig.cs" />
@@ -242,9 +245,18 @@
     <Compile Include="Services\GigServices.cs" />
     <Compile Include="Services\IGigService.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\ExternalLoginConfirmationViewModel.cs" />
+    <Compile Include="ViewModels\ExternalLoginListViewModel.cs" />
+    <Compile Include="ViewModels\ForgotPasswordViewModel.cs" />
+    <Compile Include="ViewModels\ForgotViewModel.cs" />
     <Compile Include="ViewModels\FutureDate.cs" />
     <Compile Include="ViewModels\GigFormViewModel.cs" />
+    <Compile Include="ViewModels\LoginViewModel.cs" />
+    <Compile Include="ViewModels\RegisterViewModel.cs" />
+    <Compile Include="ViewModels\ResetPasswordViewModel.cs" />
+    <Compile Include="ViewModels\SendCodeViewModel.cs" />
     <Compile Include="ViewModels\ValidTime.cs" />
+    <Compile Include="ViewModels\VerifyCodeViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -338,6 +350,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201805230420428_AddForeignKeyPropertiesToGig.resx">
       <DependentUpon>201805230420428_AddForeignKeyPropertiesToGig.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807211639503_AddNameToApplicationUser.resx">
+      <DependentUpon>201807211639503_AddNameToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
