--- a/GigHub/GigHub.csproj
+++ b/GigHub/GigHub.csproj
@@ -199,6 +199,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API\GigsController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
@@ -207,15 +208,19 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ArtistController.cs" />
-    <Compile Include="Controllers\FollowingsController.cs" />
+    <Compile Include="API\FollowingsController.cs" />
     <Compile Include="Interfaces\IArtistsService.cs" />
+    <Compile Include="Migrations\201807262226575_AddIsCanceledToGig.cs" />
+    <Compile Include="Migrations\201807262226575_AddIsCanceledToGig.Designer.cs">
+      <DependentUpon>201807262226575_AddIsCanceledToGig.cs</DependentUpon>
+    </Compile>
     <Compile Include="Services\ArtistService.cs" />
     <Compile Include="ViewModels\ArtistViewModel.cs" />
     <Compile Include="ViewModels\ArtistsViewModel.cs" />
     <Compile Include="ViewModels\GigsViewModel.cs" />
     <Compile Include="DTOs\ArtistDto.cs" />
     <Compile Include="DTOs\AttendanceDto.cs" />
-    <Compile Include="Controllers\AttendancesController.cs" />
+    <Compile Include="API\AttendancesController.cs" />
     <Compile Include="Controllers\GigsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -267,7 +272,7 @@
     <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\GigServices.cs" />
+    <Compile Include="Services\GigService.cs" />
     <Compile Include="Interfaces\IGigService.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\ExternalLoginConfirmationViewModel.cs" />
@@ -292,6 +297,8 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\bootbox.js" />
+    <Content Include="Scripts\bootbox.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
@@ -390,6 +397,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201807250337540_AddFollowings1.resx">
       <DependentUpon>201807250337540_AddFollowings1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807262226575_AddIsCanceledToGig.resx">
+      <DependentUpon>201807262226575_AddIsCanceledToGig.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
