--- a/GigHub/GigHub.csproj
+++ b/GigHub/GigHub.csproj
@@ -250,7 +250,11 @@
     <Compile Include="DTOs\GigDto.cs" />
     <Compile Include="DTOs\NotificationDto.cs" />
     <Compile Include="DTOs\UserDto.cs" />
-    <Compile Include="Interfaces\IArtistsService.cs" />
+    <Compile Include="Interfaces\IArtistRepository.cs" />
+    <Compile Include="Interfaces\IAttendanceRepository.cs" />
+    <Compile Include="Interfaces\IFollowingRepository.cs" />
+    <Compile Include="Interfaces\IGenreRepository.cs" />
+    <Compile Include="Interfaces\IUserNotificationRepository.cs" />
     <Compile Include="Migrations\201807262226575_AddIsCanceledToGig.cs" />
     <Compile Include="Migrations\201807262226575_AddIsCanceledToGig.Designer.cs">
       <DependentUpon>201807262226575_AddIsCanceledToGig.cs</DependentUpon>
@@ -266,7 +270,11 @@
     <Compile Include="Models\Notification.cs" />
     <Compile Include="Models\NotificationType.cs" />
     <Compile Include="Models\UserNotification.cs" />
-    <Compile Include="Services\ArtistService.cs" />
+    <Compile Include="Repositories\ArtistRepository.cs" />
+    <Compile Include="Repositories\AttendanceRepository.cs" />
+    <Compile Include="Repositories\FollowingRepository.cs" />
+    <Compile Include="Repositories\GenreRepository.cs" />
+    <Compile Include="Repositories\UserNotificationRepository.cs" />
     <Compile Include="ViewModels\ArtistViewModel.cs" />
     <Compile Include="ViewModels\ArtistsViewModel.cs" />
     <Compile Include="ViewModels\GigDetailViewModel.cs" />
@@ -324,8 +332,8 @@
     <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\GigService.cs" />
-    <Compile Include="Interfaces\IGigService.cs" />
+    <Compile Include="Repositories\GigRepository.cs" />
+    <Compile Include="Interfaces\IGigRepository.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\ExternalLoginConfirmationViewModel.cs" />
     <Compile Include="ViewModels\ExternalLoginListViewModel.cs" />
